# ffi-benchmark

./: CHANGELOG.md  LICENSE  benchmark.html  cabal.project  ffi-benchmark.cabal
bench/: Runtime.hs
cmmsrc/: ffi.cmm
csrc/: vector.cpp  vector.h
src/: CForeignPtr.hs  CVector.hs
