cabal-version:      3.4
name:               ffi-benchmark
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Junji Hashimoto
maintainer:         junji.hashimoto@gmail.com
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  CForeignPtr
                    , CVector
    build-depends:    base < 5.0
    hs-source-dirs:   src
    cmm-sources: cmmsrc/ffi.cmm
    cxx-sources: csrc/vector.cpp
    install-includes: csrc/vector.h
    default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -g
 if os(darwin)
  extra-libraries:     c++
 else
  extra-libraries:     stdc++

benchmark runtime
  type: exitcode-stdio-1.0
  main-is: Runtime.hs
  hs-source-dirs: bench
  build-depends:
      base >=4.7 && <5
    , criterion
    , ffi-benchmark
    , deepseq
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -g -fprof-auto
